# wikigraph

./: .dockerignore  .env.example  .gitignore  DEPLOY_TOOLFORGE.md  Dockerfile  HANDOFF.md  LICENSE  MULTI_LANGUAGE.md  README.md  ROADMAP.md  architecture-articles.txt  download_button.js  index.html  pyproject.toml  requirements.txt  server.py  startup_modal.js  view_graph.py
tests/: test_pipeline.py
wikigraph/: __init__.py  __main__.py  cache.py  config.py  pipeline.py
wikigraph/analyzer/: __init__.py  categories.py  clustering.py  ner.py
wikigraph/enricher/: __init__.py  mw_api.py  wikidata_images.py
wikigraph/graph/: __init__.py  builder.py  serializers.py
wikigraph/sources/: __init__.py  category.py  hatnote.py  pagepile.py
